# OOP_labs

./: CMakeLists.txt  READme.md  WHATS_GOING_ON_HERE?.md  func.cpp  laba1.cpp
lab7/: CMakeLists.txt  main.cpp  readme.md
lab7/include/: bear.hpp  factory.hpp  fight.hpp  npc.hpp  observer.hpp  orc.hpp  squirrel.hpp
lab7/src/: bear.cpp  factory.cpp  observer.cpp  orc.cpp  squirrel.cpp
lab7/test/: test.cpp
laba1/: CMakeLists.txt  func.h  test001.cpp
laba2/: CMakeLists.txt  READme.md  eleven.cpp  eleven.h  gtests.cpp  laba2.cpp
laba3/: CMakeLists.txt  README.md  main.cpp  tests.cpp
laba3/src/: farray.cpp  farray.h  figure.cpp  figure.h  hexagon.cpp  hexagon.h  octagon.cpp  octagon.h  point.cpp  point.h  triangle.cpp  triangle.h
laba4/: CMakeLists.txt  READme.md  tests.cpp
laba4/src/: a.out  farray.h  figure.h  hexagon.h  main.cpp  octagon.h  point.h  triangle.h
laba5/: CMakeLists.txt  allocator.h  forward_list.h  main.cpp  tests.cpp
laba6/: CMakeLists.txt  main.cpp  readme.md  tests.cpp
laba6/npc/: bear.cpp  bear.h  npc.cpp  npc.h  ork.cpp  ork.h  squirrel.cpp  squirrel.h
laba6/patterns/: factory.cpp  factory.h  observer.cpp  observer.h  visitor.cpp  visitor.h
laba6/point/: point.h
laba_4/: laba4.cpp
