cmake_minimum_required(VERSION 3.10)
project(lab5)

find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(prog main.cpp forward_list.h)

enable_testing()
add_executable(tests tests.cpp forward_list.h allocator.h)
target_link_libraries(tests ${GTEST_LIBRARIES})

add_test(NAME BASIC COMMAND tests)
